--- a/JewishCalculationWPF/packages.config
+++ b/JewishCalculationWPF/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EPPlus" version="5.4.2" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.11.28" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
 </packages>
