create MVVM for Person

--- a/JewishCalculationWPF/JewishCalculationWPF.csproj
+++ b/JewishCalculationWPF/JewishCalculationWPF.csproj
@@ -94,6 +94,7 @@
     </Compile>
     <Compile Include="Classes\GetProductsFromCheck.cs" />
     <Compile Include="Classes\Models.cs" />
+    <Compile Include="Classes\RelayCommand.cs" />
     <Compile Include="Classes\ToExcel.cs" />
     <Compile Include="Classes\ViewModels.cs" />
     <Compile Include="Windows\AddConsumption.xaml.cs">
